Fix spacing
- restores spacing beneath radio buttons, both for JS and non JS versions of the page

--- a/app/assets/stylesheets/views/_covid.scss
+++ b/app/assets/stylesheets/views/_covid.scss
@@ -270,7 +270,7 @@ $c19-landing-page-header-background: govuk-colour("blue");
 }
 
 .covid-timeline__button-wrapper {
-  margin-top: govuk-spacing(4);
+  margin-top: -(govuk-spacing(2));
 
   .js-enabled & {
     display: none;
